# aiida-integration-tests

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bash_history  docker-compose.yml  docker_stats.py
.github/workflows/: ci.yml
aiida-sleep/: pyproject.toml
aiida-sleep/aiida_sleep/: __init__.py  cli.py  sleep_job.py
aiida_config/: code-local-add.yml  code-local-sleep.yml  code-slurm-sleep.yml  computer-configure-local.yml  computer-configure-slurm.yml  computer-local.yml  computer-slurm.yml  quicksetup.yml  run_all.sh  slurm_computer_config.yml  slurm_computer_setup.yml
scripts/: memory_leak.py
ssh-keys/: README.md
