[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aiida_sleep"
author = "Chris Sewell"
author-email = "aiidateam@gmail.com"

[tool.flit.entrypoints."aiida.calculations"]
sleep = "aiida_sleep.sleep_job:SleepCalculation"

[tool.flit.entrypoints."aiida.parsers"]
sleep = "aiida_sleep.sleep_job:SleepParser"

[tool.flit.entrypoints."aiida.workflows"]
sleep = "aiida_sleep.sleep_job:SleepWorkChain"

[tool.flit.entrypoints."console_scripts"]
aiida-sleep = "aiida_sleep.cli:main"

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["aiida_sleep", "tests"]

# Settings for Black compatibility
profile = "black"
